Paragraphize (non)editable localizable content

--- a/src/components/form/editable.html
+++ b/src/components/form/editable.html
@@ -5,7 +5,7 @@
   <div ng-if="!ctrl.isEditing()" class="content">
     <a ng-if="ctrl.item.href" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
     <a ng-if="ctrl.item.onClick" ng-click="ctrl.item.onClick()">{{ctrl.item.displayValue}}</a>
-    <span ng-if="!ctrl.item.href && !ctrl.item.onClick" >{{ctrl.item.displayValue}}</span>
+    <span ng-if="!ctrl.item.href && !ctrl.item.onClick" ng-bind-html="ctrl.item.displayValue | paragraphize"></span>
     <clipboard text="ctrl.clipboard"></clipboard>
   </div>
   <error-messages ng-model-controller="ngModel"></error-messages>
