Link to vocabulary

--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -50,7 +50,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <non-editable data-title="Defined in vocabularies" value="ctrl.vocabularies" context="ctrl.model"></non-editable>
+          <non-editable data-title="Defined in vocabularies" value="ctrl.vocabularies" context="ctrl.model" link="ctrl.link"></non-editable>
         </div>
       </div>
 
