--- a/src/components/editor/definedBy.html
+++ b/src/components/editor/definedBy.html
@@ -1,1 +1,1 @@
-<non-editable data-title="{{ctrl.definedByTitle}}" value="ctrl.entity.definedBy.label" link="ctrl.model.linkTo(ctrl.entity)" context="ctrl.model"></non-editable>
+<non-editable data-title="{{ctrl.definedByTitle}}" value="ctrl.entity.definedBy.label" link="ctrl.linkTo()" context="ctrl.model"></non-editable>
