--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,6 +1,6 @@
 <h4>{{ctrl.class.normalizedType + ' information' | capitalize | translate}}</h4>
 
-<div class="row">
+<div class="row basic-info">
   <div class="col-md-6">
     <editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus="ctrl.shouldAutofocus">
       <input id="classLabel" class="form-control" type="text" localized-input="label" context="ctrl.model" ng-model="ctrl.class.label"/>
