Create backdrop using 4 rectangles

--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -117,15 +117,7 @@ body.overlay-open {
 }
 
 .help-backdrop {
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
+  position: absolute;
   background: rgba(0, 0, 0, 0.4);
   z-index: 1500;
 }
-
-.help-element-active {
-  z-index: 1600 !important;
-  position: relative;
-  background: #fff;
-}
-
