Move help poc to add new library

--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -29,7 +29,7 @@
     <error-panel error="ctrl.submitError"></error-panel>
 
     <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-    <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid" translate>Create new</button>
+    <button class="btn btn-default create" type="button" ng-click="ctrl.create()" ng-disabled="!addModelForm.$valid" translate>Create new</button>
   </modal-buttons>
 </modal-template>
 </form>
