--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -5,7 +5,7 @@
   <modal-body>
     <editable data-title="Prefix">
       <div class="input-group input-group-md">
-        <input id="prefix" type="text" class="form-control" autofocus required prefix-input ng-model="ctrl.prefix" />
+        <input id="prefix" type="text" autocomplete="off" class="form-control" autofocus required prefix-input ng-model="ctrl.prefix" />
       </div>
     </editable>
 
@@ -13,7 +13,7 @@
 
     <editable data-title="{{ctrl.type + ' label' | capitalize}}">
       <div class="input-group input-group-md">
-        <input id="name" type="text" class="form-control" required string-input="modelLabel" ng-model="ctrl.label" />
+        <input id="name" type="text" class="form-control" autocomplete="off" required string-input="modelLabel" ng-model="ctrl.label" />
       </div>
     </editable>
 
