--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -93,16 +93,16 @@ $footer-height: 50px;
 }
 
 editable-state-select {
-  i.danger { color: $brand-danger; }
-  i.warning { color: $brand-warning; }
-  i.success { color: $brand-success; }
-
   .non-editable {
     vertical-align: middle;
     line-height: 2.6;
     padding: 0 5px 0 5px;
   }
 }
+
+i.danger { color: $brand-danger; }
+i.warning { color: $brand-warning; }
+i.success { color: $brand-success; }
 
 reference-data-view.popup {
 
@@ -159,19 +159,24 @@ autocomplete, iow-select {
       }
     }
   }
+}
 
-  .dropdown-menu {
-    max-height: 400px;
-    overflow-y: auto;
+div.input-popup > .dropdown-menu {
 
-    li {
-      iow-selectable-item-transclude, span.content {
-        overflow-x: hidden;
-        width: 100%;
-        display: inline-block;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-      }
+  will-change: scroll-position;
+  z-index: 1052 !important;
+  display: inline-block !important;
+  position: fixed;
+  max-height: 400px;
+  overflow-y: auto;
+
+  li {
+    iow-selectable-item-transclude, span.content {
+      overflow-x: hidden;
+      width: 100%;
+      display: inline-block;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 }
