Fine tune width settings

--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -14,7 +14,8 @@ body.overlay-open {
   left: 2.5%;
   font-family: inherit;
   font-weight: 400;
-  max-width: 400px;
+  max-width: 500px;
+  min-width: 220px;
   border-radius: 10px;
 
   p {
