Use fixed positioning and don't apply scope before animating is done

--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -123,7 +123,7 @@ body.overlay-open {
 }
 
 .help-backdrop {
-  position: absolute;
+  position: fixed;
   background: rgba(0, 0, 0, 0.4);
   z-index: 1051; // modal is 1050
 }
