Don't autocomplete inputs

--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -13,13 +13,13 @@
 
     <editable data-title="{{ctrl.type + ' label' | capitalize}}">
       <div class="input-group input-group-md">
-        <input id="name" type="text" class="form-control" autocomplete="off" required string-input="modelLabel" ng-model="ctrl.label" />
+        <input id="name" type="text" class="form-control" autocomplete="off" required string-input="modelLabel" ng-model="ctrl.label"  />
       </div>
     </editable>
 
     <editable data-title="Namespace redirection">
       <div class="input-group input-group-md">
-        <input id="redirect" type="text" class="form-control" uri-input="free-uri" context="" ng-model="ctrl.redirect" />
+        <input id="redirect" type="text" autocomplete="off" class="form-control" uri-input="free-uri" context="" ng-model="ctrl.redirect" />
       </div>
     </editable>
 
