Don't apply 100% width to checkbox input
Closes #572

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -695,7 +695,7 @@ $input-select: 80px;
     position: inherit;
   }
 
-  input, select, textarea {
+  input:not([type="checkbox"]), select, textarea {
     width: 100%;
   }
 
