--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -44,11 +44,15 @@
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
           <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-            <h5><highlight text="searchResult.title" context="ctrl.model" search="ctrl.searchText"></highlight></h5>
-            <p><highlight text="searchResult.description" context="ctrl.model" search="ctrl.searchText"></highlight></p>
-            <p><span ng-repeat="group in searchResult.groups">{{group.title | translateValue: ctrl.model}}{{$last ? '' : ', '}}</span>
+            <h5>
+              <highlight text="searchResult.title" context="ctrl.model" search="ctrl.searchText"></highlight>
               <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
-            </p>
+            </h5>
+            <p><highlight text="searchResult.description" context="ctrl.model" search="ctrl.searchText"></highlight></p>
+
+            <div class="origin">
+              <span ng-repeat="group in searchResult.groups">{{group.title | translateValue: ctrl.model}}{{$last ? '' : ', '}}</span>
+            </div>
           </search-results>
         </div>
 
