--- a/src/components/navigation/navigationBar.html
+++ b/src/components/navigation/navigationBar.html
@@ -4,12 +4,19 @@
   </div>
 
   <ul class="nav navbar-nav navbar-right">
+
+    <li ng-if="ctrl.canStartHelp()">
+      <a ng-click="ctrl.startHelp()" uib-tooltip="{{'Start help' | translate}}" tooltip-placement="left"><i class="glyphicon glyphicon-info-sign" style="font-size: large"></i></a>
+    </li>
+
     <li ng-repeat="language in ctrl.languages">
       <a ng-click="ctrl.language = language.code">{{language.name}}</a>
     </li>
+
     <li ng-if="!ctrl.getUser().isLoggedIn()">
       <a id="login" ng-click="ctrl.openLogin()" translate>Login</a>
     </li>
+
     <li ng-if="ctrl.getUser().isLoggedIn()">
       <div class="btn-group navbar-btn" uib-dropdown is-open="status.isopen">
         <button class="btn btn-default navbar-btn" uib-dropdown-toggle>{{ctrl.getUser().name}} <span class="caret"></span></button>
@@ -19,5 +26,6 @@
         </ul>
       </div>
     </li>
+
   </ul>
 </nav>
