--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1272,6 +1272,16 @@ modal-body {
   }
 }
 
+// XXX: Same as .search-result ?
+.help.story-line {
+  font-size: small;
+  cursor: pointer;
+  border: 1px solid $gray-light;
+  margin-bottom: 10px;
+  padding: 10px;
+  box-shadow: 2px 2px 2px $brand-accent-light;
+}
+
 a.accordion-toggle {
   outline: 0;
 }
