Move popover offset HelpPopoverController state

--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -4,7 +4,7 @@ body.overlay-open {
   overflow: hidden;
 }
 
-.help-popover {
+help-popover {
   display: block;
   position: absolute;
   background: #1C252E;
