--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -16,6 +16,7 @@ help-popover {
   font-weight: 400;
   max-width: 500px;
   border-radius: 10px;
+  transition: all 0.3s ease-out;
 
   p {
     color: #CBD0D4;
