--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -130,3 +130,7 @@ help-popover {
   background: rgba(0, 0, 0, 0.2);
   z-index: 1051; // modal is 1050
 }
+
+.modal.over-help {
+  z-index: 1060 !important;
+}
