Apply change only after animation is halfway done

--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -12,9 +12,9 @@ help-popover {
   transition: all 0.3s ease-out;
 
   .help-content-wrapper {
-    p {
-      overflow: hidden;
-    }
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
   }
 }
