--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="search-class">
   <modal-template editing="false">
     <modal-title>
       <span ng-show="ctrl.onlySelection" translate>Select class</span>
