Defer property copying to confirm

--- a/src/components/editor/addPropertiesFromClassModal.html
+++ b/src/components/editor/addPropertiesFromClassModal.html
@@ -23,7 +23,7 @@
   </modal-body>
 
   <modal-buttons>
-    <button class="btn btn-primary confirm" type="button" ng-click="$close(ctrl.selectedProperties)" translate>Yes</button>
+    <button class="btn btn-primary confirm" type="button" ng-click="ctrl.confirm()" translate>Yes</button>
     <button class="btn btn-default" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
