--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -174,6 +174,7 @@ help-popover, help-popover-dimensions-calculator {
   position: fixed;
   background: rgba(0, 0, 0, 0.2);
   z-index: 1051; // modal is 1050
+  cursor: not-allowed;
 }
 
 .modal.over-help {
