Add class for better page object usability

--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="search-concept">
   <modal-template editing="true">
     <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
