--- a/src/components/model/searchNamespaceModal.html
+++ b/src/components/model/searchNamespaceModal.html
@@ -1,4 +1,4 @@
-<modal-template>
+<modal-template class="search-namespace">
   <modal-title translate>Search namespaces</modal-title>
 
   <modal-body>
