--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="search-predicate">
   <modal-template editing="false">
     <modal-title>
       <div ng-show="ctrl.onlySelection">
