--- a/src/components/model/modelPage.html
+++ b/src/components/model/modelPage.html
@@ -19,6 +19,7 @@
 
             <ul class="panel__list" ng-class="{'has-button': ctrl.canEdit()}">
               <li ng-repeat="item in tab.items() track by item.id.uri"
+                  id="{{item.id.uri}}"
                   ng-class="{'model-panel__selection': ctrl.isSelected(item)}"
                   ng-click="ctrl.select(item)">
                 {{item.label}} <ajax-loading-indicator-small ng-if="ctrl.isLoading(item)"></ajax-loading-indicator-small>
