Don't float in history modal
Closes #581

--- a/src/components/common/historyModal.html
+++ b/src/components/common/historyModal.html
@@ -18,7 +18,7 @@
     <div class="version-panel--right">
       <form class="editable-form">
         <div ng-if="ctrl.selection">
-          <div float="top-actions-placeholder">
+          <div>
             <div class="top-actions">
               <model-language-chooser context="ctrl.model"></model-language-chooser>
               <export entity="ctrl.selection" context="ctrl.model"></export>
