Generalize full height modal
Closes #575

--- a/src/components/advancedSearchModal.html
+++ b/src/components/advancedSearchModal.html
@@ -1,7 +1,7 @@
 <modal-template>
   <modal-title translate>Advanced search</modal-title>
 
-  <modal-body>
+  <modal-body class="full-height">
     <div class="row">
       <div class="col-md-6">
 
