--- a/src/components/common/historyModal.html
+++ b/src/components/common/historyModal.html
@@ -2,7 +2,7 @@
 
   <modal-title translate>Historical versions</modal-title>
 
-  <modal-body>
+  <modal-body class="full-height">
 
     <div class="version-panel--left">
       <ul class="panel__list">
