--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -5,7 +5,7 @@
       <span ng-hide="ctrl.onlySelection" translate>Add class</span>
     </modal-title>
 
-    <modal-body>
+    <modal-body class="full-height">
 
       <div class="row">
 
