--- a/src/components/model/conceptEditorModal.html
+++ b/src/components/model/conceptEditorModal.html
@@ -3,7 +3,7 @@
     <span translate>Browse concepts</span>
   </modal-title>
 
-  <modal-body>
+  <modal-body class="full-height">
 
     <div class="row">
 
