--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -108,7 +108,6 @@ reference-data-view.popup {
 
   h4 { display: none; }
 
-  max-height: calc(100vh - 250px);
   width: 100%;
   overflow-y: auto;
   display: inline-block;
@@ -459,6 +458,8 @@ ul.errors {
   width: $versionListWidth;
   float: left;
   border-right: solid 1px #ddd;
+  height: 100%;
+  overflow-y: auto;
 
   ul.nav {
     margin-right: 0;
@@ -466,7 +467,6 @@ ul.errors {
   }
 
   .panel__list {
-    height: calc(100vh - 200px);
     overflow-y: auto;
 
     li {
@@ -485,7 +485,7 @@ ul.errors {
 .version-panel--right {
   float: right;
   width: calc(100% - #{$versionListWidth});
-  height: calc(100vh - 200px);
+  height: 100%;
   overflow-y: auto;
   padding: 0 20px 20px 20px;
 
@@ -776,7 +776,6 @@ modal-body {
 
   .selection-form {
     min-height: calc(100vh - 130px);
-    padding-right: 40px;
 
     property-view .row {
       padding-right: 10px;
@@ -1059,10 +1058,6 @@ ajax-loading-indicator-small {
   }
 }
 
-.modal-footer {
-  border-top: none;
-}
-
 .bottom {
   border-top: solid 1px #ddd;
 }
@@ -1209,19 +1204,10 @@ modal-body {
   }
 
   .search-selection {
-    height: calc(100vh - 300px);
     overflow-y: auto;
   }
 
   .search-results {
-
-    height: calc(100vh - 260px);
-
-    &.with-button {
-      height: calc(100vh - 315px);
-    }
-
-    overflow-y: auto;
 
     .origin {
       font-size: x-small;
@@ -1272,12 +1258,30 @@ modal-body {
   }
 }
 
+modal-body {
+
+  display: inline-block;
+  position: relative;
+  width: 100%;
+
+  &.full-height {
+    height: calc(100vh - 250px);
+
+    > div.row {
+
+      height: 100%;
+
+      > div.col-md-4, div.col-md-6, div.col-md-12 {
+        height: 100%;
+        overflow-y: auto;
+      }
+    }
+  }
+}
+
 .help-selection {
 
-  .modal-body {
-    height: calc(100vh - 200px);
-    overflow-y: auto;
-  }
+  overflow-y: auto;
 
   // XXX: Same as .search-result ?
   .help.story-line {
