--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -2,7 +2,7 @@
   <modal-template editing="true">
     <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
-    <modal-body>
+    <modal-body class="full-height">
 
       <div class="row">
 
