--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -2,7 +2,7 @@
   <modal-template>
     <modal-title translate>Search reference data</modal-title>
 
-    <modal-body>
+    <modal-body class="full-height">
       <div class="row">
         <div class="col-md-4">
 
