--- a/src/components/model/searchVocabularyModal.html
+++ b/src/components/model/searchVocabularyModal.html
@@ -1,7 +1,7 @@
 <modal-template>
   <modal-title translate>Search vocabularies</modal-title>
 
-  <modal-body>
+  <modal-body class="full-height">
     <div class="row">
       <div class="col-md-6">
 
