Use larger modals on medium to small displays

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1003,9 +1003,17 @@ ajax-loading-indicator-small {
   }
   &.modal-medium {
     width: 60%;
+    @media (max-width: $screen-lg-min) {
+      // use large width on smaller displays
+      width: 95%;
+    }
   }
   &.modal-small {
     width: 30%;
+    @media (max-width: $screen-lg-min) {
+      // use medium width on smaller displays
+      width: 60%;
+    }
   }
   &.modal-adapting {
     width: auto;
