--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -46,7 +46,7 @@
       <button-with-options icon-class="glyphicon glyphicon-plus" ng-show="ctrl.isEditing()" options="ctrl.addPropertyActions"></button-with-options>
     </div>
 
-    <accordion ng-if="ctrl.class.properties.length > 0" open-id="ctrl.openPropertyId" drag-sortable="ctrl.properties" drag-disabled="!ctrl.isEditing()" on-reorder="ctrl.onPropertyReorder">
+    <accordion class="properties" ng-if="ctrl.class.properties.length > 0" open-id="ctrl.openPropertyId" drag-sortable="ctrl.properties" drag-disabled="!ctrl.isEditing()" on-reorder="ctrl.onPropertyReorder">
       <accordion-group ng-repeat="property in ctrl.properties track by property.internalId" identifier="property.internalId.uuid">
         <accordion-heading>
           <div class="panel-heading" drag-sortable-item>
