Test that property reusable predicate opens

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -145,7 +145,7 @@
 
   <h4 translate>Reusable predicate</h4>
 
-  <uib-accordion>
+  <uib-accordion class="reusable-predicate">
     <uib-accordion-group is-open="predicateOpen">
 
       <uib-accordion-heading>
