Explicit timeout and modal classes

--- a/src/components/common/deleteConfirmationModal.html
+++ b/src/components/common/deleteConfirmationModal.html
@@ -1,14 +1,16 @@
-<modal-template purpose="warning" default="true">
-  <modal-title translate>Confirm delete</modal-title>
-  <modal-body>
+<div class="confirmation">
+  <modal-template purpose="warning" default="true">
+    <modal-title translate>Confirm delete</modal-title>
+    <modal-body>
 
-    <div ng-if="ctrl.usage && ctrl.hasReferrers">
-      <p><span translate>Following items are depending on the deleted</span> <span>{{'of ' + ctrl.entity.normalizedType | translate}}</span></p>
-      <usage usage="ctrl.usage" exclude="ctrl.exclude" context="ctrl.context"></usage>
-      <br />
-    </div>
+      <div ng-if="ctrl.usage && ctrl.hasReferrers">
+        <p><span translate>Following items are depending on the deleted</span> <span>{{'of ' + ctrl.entity.normalizedType | translate}}</span></p>
+        <usage usage="ctrl.usage" exclude="ctrl.exclude" context="ctrl.context"></usage>
+        <br />
+      </div>
 
-    <span translate>Are you sure that you want to delete?</span>
+      <span translate>Are you sure that you want to delete?</span>
 
-  </modal-body>
-</modal-template>
+    </modal-body>
+  </modal-template>
+</div>
