--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -1,4 +1,4 @@
-<form name="addModelForm">
+<form name="addModelForm" class="add-model">
 <modal-template>
   <modal-title>{{'Add ' + ctrl.type | translate}}</modal-title>
 
