--- a/src/components/model/searchReferenceDataModal.html
+++ b/src/components/model/searchReferenceDataModal.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="search-reference-data">
   <modal-template>
     <modal-title translate>Search reference data</modal-title>
 
