--- a/src/components/model/addEditLinkModal.html
+++ b/src/components/model/addEditLinkModal.html
@@ -1,4 +1,4 @@
-<form name="addModelForm">
+<form name="addModelForm" class="add-edit-link">
   <modal-template>
     <modal-title>{{ctrl.titleLabel | translate}}</modal-title>
 
