--- a/src/components/model/addEditNamespaceModal.html
+++ b/src/components/model/addEditNamespaceModal.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="add-edit-namespace">
   <modal-template>
     <modal-title>{{ctrl.titleLabel | translate}}</modal-title>
 
