--- a/src/components/model/searchVocabularyModal.html
+++ b/src/components/model/searchVocabularyModal.html
@@ -1,32 +1,34 @@
-<modal-template>
-  <modal-title translate>Search vocabularies</modal-title>
+<div class="search-vocabulary">
+  <modal-template>
+    <modal-title translate>Search vocabularies</modal-title>
 
-  <modal-body class="full-height">
-    <div class="row">
-      <div class="col-md-6">
+    <modal-body class="full-height">
+      <div class="row">
+        <div class="col-md-6">
 
-        <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search vocabulary'"></text-filter>
+          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search vocabulary'"></text-filter>
 
-        <div class="search-panel">
-          <span class="title" translate>Filter results</span>
+          <div class="search-panel">
+            <span class="title" translate>Filter results</span>
 
-          <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
-          <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
+            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
+            <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
+          </div>
+        </div>
+
+        <div class="col-md-6 search-results">
+          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+            <h5><highlight text="searchResult.title" context="ctrl.context" search="ctrl.searchText"></highlight></h5>
+            <p><highlight text="searchResult.description" context="ctrl.context" search="ctrl.searchText"></highlight></p>
+          </search-results>
         </div>
       </div>
+    </modal-body>
 
-      <div class="col-md-6 search-results">
-        <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
-
-        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-          <h5><highlight text="searchResult.title" context="ctrl.context" search="ctrl.searchText"></highlight></h5>
-          <p><highlight text="searchResult.description" context="ctrl.context" search="ctrl.searchText"></highlight></p>
-        </search-results>
-      </div>
-    </div>
-  </modal-body>
-
-  <modal-buttons>
-    <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
-  </modal-buttons>
-</modal-template>
+    <modal-buttons>
+      <button type="button" class="btn btn-default cancel" ng-click="ctrl.close()" translate>Cancel</button>
+    </modal-buttons>
+  </modal-template>
+</div>
